fixed corners of profile avatar,text duplicates, 320px viewport sizing issues, long text button cropping

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,6 +14,7 @@
   font-size: 24px;
   font-weight: 900;
   line-height: 29.05px;
+  max-width: 219px;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -35,7 +36,7 @@
 
 .card__like-button {
   background: transparent url(../images/heart_vector.svg) center no-repeat;
-  width: 25px;
+  width: 21px;
   height: 18px;
   border: none;
   cursor: pointer;
