--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -24,7 +24,6 @@
   }
 
   .footer__text {
-    font-family: Inter;
     font-size: 14px;
     font-weight: 400;
     line-height: 16.94px;
