--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -63,6 +63,7 @@
   margin-right: 30px;
   width: 120px;
   height: 120px;
+  border-radius: 50%;
 }
 
 .profile__add-button:hover {
@@ -96,7 +97,6 @@
     padding-top: 14px;
     width: 100%;
     text-align: center;
-    font-family: Inter;
     font-size: 14px;
     font-weight: 400;
     line-height: 16.94px;
@@ -106,6 +106,7 @@
     margin: 0;
     margin-top: 36px;
     width: 100%;
+    max-width: 282px;
   }
 
   .profile__title {
